--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/estilos.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
   
 </head>
 
@@ -34,9 +35,11 @@
 <!--modal container-->
 <div id= "modal-container" class="modal-container"></div>
 
-
-
-  <script src="js/products.js"></script>
+  
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  
+  
   <script src="js/carrito.js"></script>
   <script src="js/app.js"></script>
 </body>
